--- a/index.html
+++ b/index.html
@@ -1,17 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Movie Page</title>
+  <!-- Bootstrap 5 CDN -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body>
-    <h2>Full stack development</h2>
-    <ol>
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>Bootstrap</li>
-        <li>Javascript</li>
-    </ol>
+<body class="bg-dark text-white">
+
+  <div class="container py-5">
+    <!-- Header -->
+    <h1 class="display-4 text-center mb-4">🎬 The Great Adventure</h1>
+
+    <!-- Paragraph -->
+    <p class="lead text-center mb-5">
+      Follow the epic journey of a young explorer venturing into the unknown. A thrilling movie packed with adventure, mystery, and heart.
+    </p>
+
+    <!-- Movie Poster Image -->
+    <div class="text-center mb-4">
+      <img src="https://via.placeholder.com/600x400?text=Movie+Poster" alt="Movie Poster" class="img-fluid rounded shadow">
+    </div>
+
+    <!-- Link Button -->
+    <div class="text-center">
+      <a href="https://www.imdb.com/" target="_blank" class="btn btn-primary btn-lg">
+        View on IMDb
+      </a>
+    </div>
+  </div>
+
+  <!-- Bootstrap JS Bundle -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
