--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <!-- Movie Poster Image -->
     <div class="text-center mb-4">
-      <img src="https://via.placeholder.com/600x400?text=Movie+Poster" alt="Movie Poster" class="img-fluid rounded shadow">
+      <img src="abc.jpg" alt="Movie Poster" width="500" class="img-fluid rounded shadow">
     </div>
 
     <!-- Link Button -->
